--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,40 +1,42 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/paris');">
 	<div class="banner-content">
-		<h1>Le Wagon Berlin</h1>
-		<p>Learn to code with us in Berlin</p>
-		<a class="btn btn-primary btn-lg">Start now</a>
+		<h1>Le Wagon Paris</h1>
+		<p>Learn to code with us in Paris</p>
+		<a class="btn btn-warning btn-lg">Start now</a>
 	</div>
 </div>
+
 <div class="container">
+	<h2> The most popular cities :</h2>
 	<div class="row">
 		<div class="col-xs-12 col-sm-4">
-			<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+			<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/rio');">
 				<div class="card-category">Popular</div>
 				<div class="card-description">
-					<h2>Le Wagon Shanghai</h2>
-					<p>Very cool city, the best</p>
+					<h2>Le Wagon Rio de Janeiro</h2>
+					<p>Suniest city, code on the beach</p>
 				</div>
 				<img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
 				<a class="card-link" href="#" ></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
-			<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+			<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/barcelona');">
 				<div class="card-category">Popular</div>
 				<div class="card-description">
-					<h2>Le Wagon Shanghai</h2>
-					<p>Very cool city, the best</p>
+					<h2>Le Wagon Barcelona</h2>
+					<p>The best to party</p>
 				</div>
 				<img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
 				<a class="card-link" href="#" ></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
-			<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+			<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/lille');">
 				<div class="card-category">Popular</div>
 				<div class="card-description">
-					<h2>Le Wagon Shanghai</h2>
-					<p>Very cool city, the best</p>
+					<h2>Le Wagon Lille</h2>
+					<p>The best to be drunk</p>
 				</div>
 				<img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
 				<a class="card-link" href="#" ></a>
