--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -5,6 +5,10 @@
   background-position: center;
   color: white;
   position: relative;
+  margin-top: 20px;
+  border-radius : 8px;
+  box-shadow: 0 15px 30px 0 rgba(0,0,0,2);
+  margin-bottom: 20px;
 }
 .card-user {
   position: absolute;
