--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,5 +1,11 @@
 // Define variables for your color scheme
 
+a {
+  color: grey;
+  &:hover {
+    color: black;
+  }
+}
 // For example:
 $red: #EE5F5B;
 $blue: #469AE0;
