--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -1,9 +1,8 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-
+@import url("https://fonts.googleapis.com/css?family=Audiowide|Press+Start+2P");
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
+$body-font: 'Audiowide', 'sans-serif';
+$headers-font: 'Press Start 2P', 'cursive';
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
